/*
 * Copyright 2020 Accenture Global Solutions Limited
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package trac.api;

option java_package = "com.accenture.trac.api";
option java_multiple_files = true;

import "trac/metadata/type.proto";
import "trac/metadata/object_id.proto";
import "trac/metadata/object.proto";
import "trac/metadata/tag.proto";

import "google/api/annotations.proto";


service TracOrchestratorApi {

  rpc validateJob (JobRequest) returns (JobStatus);

  rpc executeJob (JobRequest) returns (JobStatus);

  rpc cancelJob (metadata.TagSelector) returns (JobStatus);

  rpc followJob (metadata.TagSelector) returns (stream JobStatus);
}


enum JobType {

  JOB_TYPE_NOT_SET = 0;
  RUN_MODEL = 1;
  RUN_FLOW = 2;
}

enum JobStatusCode {

  JOB_STATUS_CODE_NOT_SET = 0;
  NOT_STARTED = 1;
  PREPARING = 2;
  QUEUED = 3;
  SUBMITTED = 4;
  RUNNING = 5;
  COMPLETE = 6;
  FAILED = 7;
  CANCELLED = 8;
}

message JobRequest {

  string tenant = 1;

  JobType jobType = 2;

  metadata.TagSelector target = 3;
  map<string, metadata.Value> parameters = 4;
  map<string, metadata.TagSelector> resources = 5;
}


message JobStatus {

  JobStatusCode status = 1;
  string message = 2;
}
